footer 추가 및 index 페이지 폰트와 자잘한 디자인 수정

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </main>
 
     <footer>
-
+        <p>&copy; 2025 괴담에 떨어져도 출근을 해야 하는구나 by 백덕수. All rights reserved. This website is a fan creation by <a href="https://github.com/h1gyeon9" target="_blank">Huigyeong Na</a> and is not affiliated with the original work.</p>
     </footer>
     
     <script>
