--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <main>
         <h1 id="title">&lt;우주 쇼핑몰&gt;</h1>
         <h2 id="introduction">&#8251;<span id="colorChange">외계</span>에서 온 멋진 물건&#8251;~!!</h2>
-        <h3 id="linktomall">&gt;&gt;나는 <a href="">물건</a>을 본다</h3>
-        <img src="/img/rotatingufo.gif" id="ufogif">
+        <h3 id="linktomall">&gt;&gt;나는 <a href="/shop.html">물건</a>을 본다</h3>
+        <img src="/src/rotatingufo.gif" id="ufogif">
     </main>
 
     <footer>
-        <p>&copy; 2025 괴담에 떨어져도 출근을 해야 하는구나 by 백덕수. All rights reserved. This website is a fan creation by <a href="https://github.com/h1gyeon9" target="_blank">Huigyeong Na</a> and is not affiliated with the original work.</p>
+        <p>&copy; 2025 괴담에 떨어져도 출근을 해야 하는구나 by 백덕수. All rights reserved.<br>This website is a fan creation by <a href="https://github.com/h1gyeon9" target="_blank">Huigyeong Na</a> and is not affiliated with the original work.</p>
     </footer>
     
     <script>
