index.html에 브라운 대사 주석으로 추가

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/css/index.css">
     <title>우주 쇼핑몰</title>
 </head>
+
+<!-- 대체 뭡니까. 이 미감이라고는 그 어디도 보이지 않는 추잡한 전단지는. -->
+
 <body>
     <header>
 
