--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -37,7 +37,7 @@
         <h2>쇼핑용 손수레</h2>
         <ul id="cart-list"></ul>
         <p id="total-price"></p>
-        <h3 onclick="if (document.getElementById('cart-list').children.length === 0) { alert('빈 손수레.'); event.preventDefault(); } else { alert('무통장 입금 (=개발자에게 커피를 사다) >> 국민 029302-04-437678'); }"><a href="landing.html">구매하다</a></h3>
+        <h3 onclick="if (document.getElementById('cart-list').children.length === 0) { alert('빈 손수레.'); event.preventDefault(); } else { alert('감사하다 구매'); }"><a href="landing.html">구매하다</a></h3>
     </main>
 
     <footer>
